--- a/conf/config.json
+++ b/conf/config.json
@@ -1,10 +1,10 @@
 Config = {
-	"authkey": "c792039948cfc2443cf7d39a6c09c93bc8fda73e:c5cc7da14f3685f5632d484d36838c91ec6316a0",
-	"endpoint": "https://lrs.simbotix.com.au/data/xAPI/",
+	"authkey": "username:password",
+	"endpoint": "https://yourlrs.com.data/xAPI/",
 	"mapBoxToken": "",
-    "objectID" : "https://xapi.com.au/xapi-esxapi-app",
-    "rootURL" : "https://digitallearningsolutions.com.au/ESxAPI",
-    "dashboard":"https://digitallearningsolutions.com.au/ESxAPI/dashboard.html",
+    "objectID" : "https://objectid.com/xapi-app",
+    "rootURL" : "https://myprojectrooturl.com/xapi-app",
+    "dashboard":"https://myprojectrooturl.com.au/xapi-app/dashboard.html",
     "radius":"50",
     "googleMapsAPI":"",
 }
